# app_powerdog_client

./: .gitignore  LICENSE  README.md  app.py  ble.py  client.py  config.ini  data.py  example_ha_dashboard.yaml  powerdog_mqtt_sensors.yaml  pylock.toml  pyproject.toml  requirements.txt
docs/: config.ini
scripts/: setup_local_dev.sh
src/powerdog/: client.py  config.py  data.py  mq.py  pd.py
src/powerdog/todo/: miniMQTT.py  testMqttDriver.sh
